crates/query-engine/translation/tests/snapshots/tests__nested_recursive_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([10_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([1_RELATIONSHIP_Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          ISNULL([7_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              JSON_QUERY([3_RELATIONSHIP_Artist].[json], '$') AS [Artist]
            FROM
              [public].[Album] AS [2_Album]
              OUTER APPLY (
                SELECT
                  ISNULL([5_rows].[row_json], '[]') AS [rows]
                FROM
                  (
                    SELECT
                      [4_Artist].[Name] AS [name]
                    FROM
                      [public].[Artist] AS [4_Artist]
                    WHERE
                      ([2_Album].[ArtistId] = [4_Artist].[ArtistId]) FOR JSON PATH,
                      INCLUDE_NULL_VALUES
                  ) AS [5_rows]([row_json]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [3_RELATIONSHIP_Artist]([json])
            WHERE
              ([0_Artist].[ArtistId] = [2_Album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [7_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Albums]([json]) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [10_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
