crates/query-engine/translation/tests/snapshots/tests__select_where_album_id_equals_self_nested_object_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([13_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Track].[Name] AS [track],
      [0_Track].[AlbumId] AS [AlbumId],
      JSON_QUERY([1_RELATIONSHIP_Album].[json], '$') AS [Album]
    FROM
      [public].[Track] AS [0_Track]
      OUTER APPLY (
        SELECT
          ISNULL([7_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [2_Album].[Title] AS [album],
              JSON_QUERY([3_RELATIONSHIP_Artist].[json], '$') AS [Artist]
            FROM
              [public].[Album] AS [2_Album]
              OUTER APPLY (
                SELECT
                  ISNULL([5_rows].[row_json], '[]') AS [rows]
                FROM
                  (
                    SELECT
                      [4_Artist].[Name] AS [artist],
                      [4_Artist].[ArtistId] AS [ArtistId]
                    FROM
                      [public].[Artist] AS [4_Artist]
                    WHERE
                      ([2_Album].[ArtistId] = [4_Artist].[ArtistId]) FOR JSON PATH,
                      INCLUDE_NULL_VALUES
                  ) AS [5_rows]([row_json]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [3_RELATIONSHIP_Artist]([json])
            WHERE
              ([0_Track].[AlbumId] = [2_Album].[AlbumId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [7_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Album]([json])
      INNER JOIN (
        SELECT
          *
        FROM
          [public].[Album] AS [9_BOOLEXP_Album]
      ) AS [9_BOOLEXP_Album] ON (
        (
          ([9_BOOLEXP_Album].[Title] = cast(@P1 as varchar))
          AND (
            [0_Track].[AlbumId] = [9_BOOLEXP_Album].[AlbumId]
          )
        )
      )
      INNER JOIN (
        SELECT
          *
        FROM
          [public].[Album] AS [10_BOOLEXP_Album]
      ) AS [10_BOOLEXP_Album] ON (
        (
          (
            [10_BOOLEXP_Album].[Title] = cast(@P2 as varchar)
          )
          AND (
            [0_Track].[AlbumId] = [10_BOOLEXP_Album].[AlbumId]
          )
        )
      )
      INNER JOIN (
        SELECT
          *
        FROM
          [public].[Artist] AS [11_BOOLEXP_Artist]
      ) AS [11_BOOLEXP_Artist] ON (
        (
          (
            [11_BOOLEXP_Artist].[Name] = cast(@P3 as varchar)
          )
          AND (
            [10_BOOLEXP_Album].[ArtistId] = [11_BOOLEXP_Artist].[ArtistId]
          )
        )
      )
    WHERE
      (
        [9_BOOLEXP_Album].[AlbumId] > [11_BOOLEXP_Artist].[ArtistId]
      )
    ORDER BY
      [0_Track].[TrackId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [13_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("The album title (1)")), (2, String("The album title (2)")), (3, String("The Artist name"))]
