crates/query-engine/translation/tests/snapshots/tests__select_where_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([7_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Artist].[Name] AS [title],
      JSON_QUERY([1_RELATIONSHIP_albums].[json], '$') AS [albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          ISNULL([3_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [2_Album].[Title] AS [title]
            FROM
              [public].[Album] AS [2_Album]
            WHERE
              ([0_Artist].[ArtistId] = [2_Album].[ArtistId])
            ORDER BY
              [2_Album].[AlbumId] ASC FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [3_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_albums]([json])
      INNER JOIN (
        SELECT
          *
        FROM
          [public].[Album] AS [5_BOOLEXP_Album]
        WHERE
          (
            [0_Artist].[ArtistId] = [5_BOOLEXP_Album].[ArtistId]
          )
      ) AS [5_BOOLEXP_Album] ON (1 = 1)
    WHERE
      (
        [5_BOOLEXP_Album].[Title] LIKE cast(@P1 as varchar)
      )
    ORDER BY
      [0_Artist].[ArtistId] ASC FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [7_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Supernatural"))]
