crates/query-engine/translation/tests/snapshots/tests__sorting_by_nested_relationship_count.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([4_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Artist].[Name] AS [Name]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          count([1_ORDER_PART_Album].[AlbumId]) AS [AlbumId]
        FROM
          (
            SELECT
              [1_ORDER_PART_Album].[AlbumId] AS [AlbumId]
            FROM
              [public].[Album] AS [1_ORDER_PART_Album]
            WHERE
              (
                [0_Artist].[ArtistId] = [1_ORDER_PART_Album].[ArtistId]
              )
          ) AS [1_ORDER_PART_Album]
      ) AS [2_ORDER_FOR_Artist]
    ORDER BY
      [2_ORDER_FOR_Artist].[AlbumId] DESC OFFSET 0 ROWS FETCH NEXT 3 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [4_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
