crates/query-engine/translation/tests/snapshots/tests__sorting_by_recursive_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([5_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Company].[Name] AS [Name]
    FROM
      [public].[Company] AS [0_Company]
      OUTER APPLY (
        SELECT
          [2_ORDER_PART_Person].[Name] AS [Name]
        FROM
          (
            SELECT
              [1_ORDER_PART_Person].[ParentId] AS [ParentId]
            FROM
              [public].[Person] AS [1_ORDER_PART_Person]
            WHERE
              (
                [0_Company].[CEOId] = [1_ORDER_PART_Person].[PersonId]
              )
          ) AS [1_ORDER_PART_Person]
          OUTER APPLY (
            SELECT
              [2_ORDER_PART_Person].[Name] AS [Name]
            FROM
              [public].[Person] AS [2_ORDER_PART_Person]
            WHERE
              (
                [1_ORDER_PART_Person].[ParentId] = [2_ORDER_PART_Person].[PersonId]
              )
          ) AS [2_ORDER_PART_Person]
      ) AS [3_ORDER_FOR_Company]
    ORDER BY
      [3_ORDER_FOR_Company].[Name] ASC FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [5_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
