crates/query-engine/translation/tests/snapshots/tests__sorting_by_relationship_count_with_predicate.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([5_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Artist].[Name] AS [Name]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          COUNT(*) AS [count]
        FROM
          [public].[Album] AS [1_Album]
        WHERE
          (
            ([0_Artist].[ArtistId] = [1_Album].[ArtistId])
            AND EXISTS (
              SELECT
                1 AS [one]
              FROM
                [public].[Track] AS [2_track]
              WHERE
                (
                  ([2_track].[Name] LIKE cast(@P1 as varchar))
                  AND ([1_Album].[AlbumId] = [2_track].[AlbumId])
                )
            )
          )
      ) AS [3_ORDER_COUNT_FOR_Artist]
    ORDER BY
      [3_ORDER_COUNT_FOR_Artist].[count] DESC,
      [0_Artist].[Name] DESC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [5_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("The%"))]
