crates/query-engine/translation/tests/snapshots/tests__very_nested_recursive_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([18_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([1_RELATIONSHIP_Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          ISNULL([15_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              JSON_QUERY([3_RELATIONSHIP_Artist].[json], '$') AS [Artist]
            FROM
              [public].[Album] AS [2_Album]
              OUTER APPLY (
                SELECT
                  ISNULL([13_rows].[row_json], '[]') AS [rows]
                FROM
                  (
                    SELECT
                      [4_Artist].[Name] AS [name],
                      JSON_QUERY([5_RELATIONSHIP_Albums].[json], '$') AS [Albums]
                    FROM
                      [public].[Artist] AS [4_Artist]
                      OUTER APPLY (
                        SELECT
                          ISNULL([11_rows].[row_json], '[]') AS [rows]
                        FROM
                          (
                            SELECT
                              JSON_QUERY([7_RELATIONSHIP_Artist].[json], '$') AS [Artist]
                            FROM
                              [public].[Album] AS [6_Album]
                              OUTER APPLY (
                                SELECT
                                  ISNULL([9_rows].[row_json], '[]') AS [rows]
                                FROM
                                  (
                                    SELECT
                                      [8_Artist].[Name] AS [name]
                                    FROM
                                      [public].[Artist] AS [8_Artist]
                                    WHERE
                                      ([6_Album].[ArtistId] = [8_Artist].[ArtistId]) FOR JSON PATH,
                                      INCLUDE_NULL_VALUES
                                  ) AS [9_rows]([row_json]) FOR JSON PATH,
                                  INCLUDE_NULL_VALUES,
                                  WITHOUT_ARRAY_WRAPPER
                              ) AS [7_RELATIONSHIP_Artist]([json])
                            WHERE
                              ([4_Artist].[ArtistId] = [6_Album].[ArtistId]) FOR JSON PATH,
                              INCLUDE_NULL_VALUES
                          ) AS [11_rows]([row_json]) FOR JSON PATH,
                          INCLUDE_NULL_VALUES,
                          WITHOUT_ARRAY_WRAPPER
                      ) AS [5_RELATIONSHIP_Albums]([json])
                    WHERE
                      ([2_Album].[ArtistId] = [4_Artist].[ArtistId]) FOR JSON PATH,
                      INCLUDE_NULL_VALUES
                  ) AS [13_rows]([row_json]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [3_RELATIONSHIP_Artist]([json])
            WHERE
              ([0_Artist].[ArtistId] = [2_Album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [15_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Albums]([json]) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [18_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
